Dark mode fixes and code cleanup

--- a/asset/css/account-action.css
+++ b/asset/css/account-action.css
@@ -54,66 +54,8 @@
           transform: translate(50%, -50%);
 }
 
-.account-action .dropdown {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  margin: 0;
-}
-
-.account-action .dropdown .trigger:hover + .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  top: 100%;
-}
-
-.account-action .dropdown .menu {
-  display: none;
-  background-color: white;
-  position: absolute;
-  top: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border-radius: 10px;
-  -webkit-box-shadow: 5px 5px 5px gray;
-          box-shadow: 5px 5px 5px gray;
-}
-
-.account-action .dropdown .menu a {
-  padding: 20px 25px;
-  margin: 0;
-  color: black;
-  border-bottom: 1px solid lightgray;
-}
-
-.account-action .dropdown .menu a:hover {
-  text-decoration: underline;
-}
-
-.account-action .dropdown .menu:hover {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.account-action .dropdown:hover {
+  background-color: transparent;
 }
 
 @media (max-width: 768px) {
@@ -127,6 +69,9 @@
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
+  }
+  .account-action .dropdown .menu {
+    margin: 10px -120%;
   }
   .account-action .dropdown .menu a {
     padding: 10px 20px;
